examples/core/errors/syntax_errors/02_malformed_match.core.tao
%match x ~ $Type {
  | y -> y
  | #Some(z -> z
}
